@@ -59,6 +59,164 @@ static bool testGetIntersectionWithLine(core::triangle3d<T>& triangle, const cor
 	return allExpected;
 }
 
+// modifying the same triangle in diverse ways get some more test-cases automatically
+template<class T>
+static bool stageModifications(int stage, triangle3d<T>& triangle)
+{
+	switch ( stage )
+	{
+		case 0:
+			return true;
+		case 1:
+			swap(triangle.pointB, triangle.pointC);
+			return true;
+		case 2:
+			swap(triangle.pointA, triangle.pointC);
+			return true;
+		case 3:
+			triangle.pointA.Z += 1000;
+			triangle.pointB.Z += 1000;
+			triangle.pointC.Z += 1000;
+			return true;
+		case 4:
+			swap(triangle.pointA.Y, triangle.pointA.Z);
+			swap(triangle.pointB.Y, triangle.pointB.Z);
+			swap(triangle.pointC.Y, triangle.pointC.Z);
+			return true;
+	}
+	return false;
+}
+
+template<class T>
+static void stageModifications(int stage, vector3d<T>& point)
+{
+	switch ( stage )
+	{
+		case 3:
+			point.Z += 1000;
+			break;
+		case 4:
+			swap(point.Y, point.Z);
+			break;
+	}
+}
+
+template<class T>
+static bool isPointInside(triangle3d<T> triangleOrig)
+{
+	bool allExpected=true;
+	
+	array< vector3d<T> > pointsInside;
+	pointsInside.push_back( vector3d<T>(0,0,0) );
+	pointsInside.push_back( (triangleOrig.pointA + triangleOrig.pointB + triangleOrig.pointC) / 3 );
+	pointsInside.push_back( (triangleOrig.pointA + triangleOrig.pointB)/2 + vector3d<T>(0,1,0) );
+	pointsInside.push_back( (triangleOrig.pointA + triangleOrig.pointC)/2 + vector3d<T>(1,0,0) );
+	pointsInside.push_back( (triangleOrig.pointB + triangleOrig.pointC)/2 - vector3d<T>(1,0,0) );
+	
+	for (u32 stage=0; ; ++stage)
+	{
+		triangle3d<T> triangle = triangleOrig;
+		if ( !stageModifications(stage, triangle) )
+			break;
+		
+		for ( u32 i=0; i < pointsInside.size(); ++i )
+		{
+			vector3d<T> point = pointsInside[i];
+			stageModifications(stage, point);
+			
+			allExpected &= triangle.isPointInside( point );
+			if ( !allExpected )
+			{
+				logTestString("triangle3d::isPointInside pointsInside test failed in stage %d point %d\n", stage, i);
+				return false;
+			}
+			
+			allExpected &= triangle.isPointInsideFast( point );
+			if ( !allExpected )
+			{
+				logTestString("triangle3d::isPointInsideFast pointsInside test failed in stage %d point %d\n", stage, i);
+				return false;
+			}
+		}
+	}
+	
+	array< vector3d<T> > pointsOutside;
+	pointsOutside.push_back( triangleOrig.pointA - vector3d<T>(1,0,0) );
+	pointsOutside.push_back( triangleOrig.pointA - vector3d<T>(0,1,0) );
+	pointsOutside.push_back( triangleOrig.pointB + vector3d<T>(1,0,0) );
+	pointsOutside.push_back( triangleOrig.pointB - vector3d<T>(0,1,0) );
+	pointsOutside.push_back( triangleOrig.pointC - vector3d<T>(1,0,0) );
+	pointsOutside.push_back( triangleOrig.pointC + vector3d<T>(1,0,0) );
+	pointsOutside.push_back( triangleOrig.pointC + vector3d<T>(0,1,0) );
+	pointsOutside.push_back( (triangleOrig.pointA + triangleOrig.pointB)/2 - vector3d<T>(0,1,0) );
+	pointsOutside.push_back( (triangleOrig.pointA + triangleOrig.pointC)/2 - vector3d<T>(1,0,0) );
+	pointsOutside.push_back( (triangleOrig.pointB + triangleOrig.pointC)/2 + vector3d<T>(1,0,0) );
+	
+	for (u32 stage=0; ; ++stage)
+	{
+		triangle3d<T> triangle = triangleOrig;
+		if ( !stageModifications(stage, triangle) )
+			break;
+		
+		for ( u32 i=0; i < pointsOutside.size(); ++i )
+		{
+			vector3d<T> point = pointsOutside[i];
+			stageModifications(stage, point);
+			
+			allExpected &= !triangle.isPointInside( point );
+			if ( !allExpected )
+			{
+				logTestString("triangle3d::isPointInside pointsOutside test failed in stage %d point %d\n", stage, i);
+				return false;
+			}
+			
+			allExpected &= !triangle.isPointInsideFast( point );
+			if ( !allExpected )
+			{
+				logTestString("triangle3d::isPointInsideFast pointsOutside test failed in stage %d point %d\n", stage, i);
+				return false;
+			}
+		}
+	}
+	
+	array< vector3d<T> > pointsBorder;
+	pointsBorder.push_back( triangleOrig.pointA );
+	pointsBorder.push_back( triangleOrig.pointB );
+	pointsBorder.push_back( triangleOrig.pointC );
+	pointsBorder.push_back( (triangleOrig.pointA + triangleOrig.pointB)/2 );
+	pointsBorder.push_back( (triangleOrig.pointA + triangleOrig.pointC)/2 );
+	pointsBorder.push_back( (triangleOrig.pointB + triangleOrig.pointC)/2 );
+	
+	for (u32 stage=0; ; ++stage)
+	{
+		triangle3d<T> triangle = triangleOrig;
+		if ( !stageModifications(stage, triangle) )
+			break;
+		
+		for ( u32 i=0; i < pointsBorder.size(); ++i )
+		{
+			vector3d<T> point = pointsBorder[i];
+			stageModifications(stage, point);
+
+			allExpected &= triangle.isPointInside( point );
+			if ( !allExpected )
+			{
+				logTestString("triangle3d::isPointInside pointsBorder test failed in stage %d point %d\n", stage, i);
+				return false;
+			}
+			
+			/*	results for isPointInsideFast are mixed for border cases, but I guess that's fine.
+			if ( triangle.isPointInsideFast( point ) )
+				logTestString("+ triangle3d::isPointInsideFast pointsBorder stage %d point %d is INSIDE\n", stage, i);
+			else 
+				logTestString("- triangle3d::isPointInsideFast pointsBorder stage %d point %d is NOT inside\n", stage, i);
+			*/
+		}
+	}
+
+	return allExpected;
+}
+
 
 // Test the functionality of triangle3d<T>
 /** Validation is done with asserts() against expected results. */
@@ -89,6 +247,29 @@ bool testTriangle3d(void)
 		allExpected &= testGetIntersectionWithLine(triangle, ray);
 	}
 
+	bool testEigen = triangle3di(vector3di(250, 0, 0), vector3di(0, 0, 500), vector3di(500, 0, 500)).isPointInside(vector3di(300,0,300));
+	if ( !testEigen )	// test from Eigen from here: http://irrlicht.sourceforge.net/forum/viewtopic.php?f=7&t=44372&p=254331#p254331
+		logTestString("Test isPointInside fails with integers\n");
+	allExpected &= testEigen;
+	
+	logTestString("Test isPointInside with f32\n");
+	{
+		triangle3d<f32> t(vector3d<f32>(-1000,-1000,0), vector3d<f32>(1000,-1000,0), vector3d<f32>(0,1000,0));	
+		allExpected &= isPointInside(t);
+	}
+	
+	logTestString("Test isPointInside with f64\n");
+	{
+		triangle3d<f64> t(vector3d<f64>(-1000,-1000,0), vector3d<f64>(1000,-1000,0), vector3d<f64>(0,1000,0));	
+		allExpected &= isPointInside(t);
+	}
+	
+	logTestString("Test isPointInside with s32\n");
+	{
+		triangle3d<s32> t(vector3d<s32>(-1000,-1000,0), vector3d<s32>(1000,-1000,0), vector3d<s32>(0,1000,0));	
+		allExpected &= isPointInside(t);
+	}
+	
 	if(allExpected)
 		logTestString("\nAll tests passed\n");
 	else
