@@ -289,6 +289,16 @@ The following names can be queried for the given types:
 -----------------------------
 Changes in 1.7.3 (??.??.2011)
 
+ - editbox no longer moves text into next line when it fails wrapping creating senseless empty lines which mess up scrolling.
+
+ - Fix crash in editbox when scrolling up with empty first lines caused by textwrapping.
+
+ - triangle3d::isPointInside can now work with larger integers, old version failed already with values in the 3-digit range. It got also faster. (thx @ Eigen for report + testcase and REDDemon for patch proposal).
+
+ - Fix focus problem when removing an unfocused modal dialog reported by Reiko here: http://irrlicht.sourceforge.net/forum/viewtopic.php?f=7&t=44358
+
+ - Add integer template specialization for vector3d::getSphericalCoordinateAngles which rounds angles to nearest integer now.
+
  - Recalculate FrameRect and ScrollPos in CGUIEditBox when AbsoluteRect gets changed (thx @ serengeor for report + testcase)
  
  - Fix 'k' in bigfont.png (thx @ Scrappi for reporting)
